<resources>
    <string name="app_name">JournalApp</string>
    <string name="journal_title_hint">Title</string>
    <string name="journal_body_hint">Journal</string>
    <string name="label">Label</string>
    <string name="inspiration_label">Inspiration</string>
    <string name="work_label">Work</string>
    <string name="personal_label">Personal</string>
    <string name="add_button_text">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_journal_label">Add</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="web_client_id">1065876959406-a8rps7lm4lgdhg2gtr35nurscqt6ijn6.apps.googleusercontent.com</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="reminder">Reminder</string>
    <string name="edit">Edit</string>
    <string name="sign_in_pb_title">Signing in with Google</string>
    <string name="sign_in_pb_msg">Loading…</string>
    <string name="db_node_journal">Journal</string>
    <string name="remind_me_label">Remind later in</string>
    <string name="remind_me_button_text">Remind me</string>
    <string-array name="remind_me_minutes">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="logo_description">This is the app\'s logo</string>
</resources>
