<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:id="@+id/et_journal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="#00000000"
            android:ems="15"
            android:hint="@string/journal_title_hint"
            android:inputType="text"
            android:outlineProvider="none"
            android:paddingLeft="@dimen/left_padding"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_journal_body"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:gravity="start"
            android:hint="@string/journal_body_hint"
            android:paddingLeft="@dimen/left_padding"
            android:background="#00000000"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="@+id/et_journal_title"
            app:layout_constraintTop_toBottomOf="@+id/et_journal_title" />

        <CheckBox
            android:id="@+id/cb_inspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/inspiration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_journal_body" />

        <CheckBox
            android:id="@+id/cb_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/work_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_inspiration" />

        <CheckBox
            android:id="@+id/cb_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/personal_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_work" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_personal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialOrange"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialBlue"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialLemon"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialYellow"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialPink"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialPurple"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialDarkBlue"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/materialLightBlue"
                tools:layout_editor_absoluteX="@dimen/sixteen_dp"
                tools:layout_editor_absoluteY="420dp" />
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>
</ScrollView>